tests/ui/const-generics/mgca/bad-impl-trait-with-apit.stderr
error: function items cannot be used as const args
  --> $DIR/bad-impl-trait-with-apit.rs:8:25
   |
LL | impl<'t> Trait for [(); N] {}
   |                         ^

error: aborting due to 1 previous error

